@startuml

'Diagramme de classes (PlantUML)'

'Configuration charte graphique'
hide empty methods
hide circle
skinparam class {
  BackgroundColor White
  ArrowColor Black
  BorderColor Black
  AttributeIconSize 0
}

'Classes, énumérations, etc.'
class MiniSocs {
  - nom: String
}
class Utilisateur {
  - pseudonyme: String
  - nom: String
  - prénom: String
  - courriel: String
  - etatCompte: ÉtatCompte
}
enum ÉtatCompte <<enum>> {
  ACTIF
  DÉSACTIVÉ
  BLOQUÉ
}

class Réseau {
  createur : Utilisateur 
  nomDuReseau : String
  listeModo : Queue<Message>
  listeMessages : Queue<Message>
}

class Membre {
  pseudo: String
  moderateur: Bool
}

class Message {
  contenu: String
  visible: Bool
  horaire: String
}

'Associations, etc.'
MiniSocs "1" *--> "0..*" Utilisateur : possède
MiniSocs "0..*" *--> "1" Réseau : possède

Réseau "1..*" -- "1..*" Membre: créé

Membre "1" -- "0..*" Message: poste

Utilisateur "1" --> "0..*" Réseau: Créé
Utilisateur "1" *--> "0..*" Membre: représente

'Au besoin, aides pour le positionnement'

@enduml
